--- a/dummy_bigram_model.ipynb
+++ b/dummy_bigram_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7fed40122230>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.manual_seed(1337)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,27 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"-'VlDa\"]"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# [decode(x.tolist()) for x in out]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,90 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step 0: train loss 2.4503 val loss 2.4970\n",
-      "step 200: train loss 2.4568 val loss 2.4964\n",
-      "step 400: train loss 2.4574 val loss 2.4930\n",
-      "step 600: train loss 2.4595 val loss 2.4883\n",
-      "step 800: train loss 2.4634 val loss 2.4908\n",
-      "step 1000: train loss 2.4528 val loss 2.4903\n",
-      "step 1200: train loss 2.4582 val loss 2.5023\n",
-      "step 1400: train loss 2.4617 val loss 2.4911\n",
-      "step 1600: train loss 2.4571 val loss 2.4900\n",
-      "step 1800: train loss 2.4492 val loss 2.4977\n",
-      "step 2000: train loss 2.4589 val loss 2.4981\n",
-      "step 2200: train loss 2.4548 val loss 2.4946\n",
-      "step 2400: train loss 2.4549 val loss 2.4920\n",
-      "step 2600: train loss 2.4595 val loss 2.4892\n",
-      "step 2800: train loss 2.4640 val loss 2.4887\n",
-      "step 3000: train loss 2.4578 val loss 2.4844\n",
-      "step 3200: train loss 2.4570 val loss 2.4940\n",
-      "step 3400: train loss 2.4535 val loss 2.4813\n",
-      "step 3600: train loss 2.4548 val loss 2.4915\n",
-      "step 3800: train loss 2.4567 val loss 2.4937\n",
-      "step 4000: train loss 2.4574 val loss 2.4930\n",
-      "step 4200: train loss 2.4591 val loss 2.4920\n",
-      "step 4400: train loss 2.4504 val loss 2.4896\n",
-      "step 4600: train loss 2.4539 val loss 2.4956\n",
-      "step 4800: train loss 2.4581 val loss 2.4824\n",
-      "step 5000: train loss 2.4526 val loss 2.4891\n",
-      "step 5200: train loss 2.4673 val loss 2.4850\n",
-      "step 5400: train loss 2.4526 val loss 2.4973\n",
-      "step 5600: train loss 2.4610 val loss 2.4952\n",
-      "step 5800: train loss 2.4461 val loss 2.4840\n",
-      "step 6000: train loss 2.4628 val loss 2.4953\n",
-      "step 6200: train loss 2.4605 val loss 2.5007\n",
-      "step 6400: train loss 2.4615 val loss 2.4999\n",
-      "step 6600: train loss 2.4552 val loss 2.4921\n",
-      "step 6800: train loss 2.4565 val loss 2.5063\n",
-      "step 7000: train loss 2.4562 val loss 2.4997\n",
-      "step 7200: train loss 2.4602 val loss 2.4932\n",
-      "step 7400: train loss 2.4600 val loss 2.4949\n",
-      "step 7600: train loss 2.4540 val loss 2.5029\n",
-      "step 7800: train loss 2.4574 val loss 2.4855\n",
-      "step 8000: train loss 2.4525 val loss 2.4982\n",
-      "step 8200: train loss 2.4473 val loss 2.4947\n",
-      "step 8400: train loss 2.4537 val loss 2.4903\n",
-      "step 8600: train loss 2.4509 val loss 2.4947\n",
-      "step 8800: train loss 2.4562 val loss 2.4882\n",
-      "step 9000: train loss 2.4590 val loss 2.4989\n",
-      "step 9200: train loss 2.4538 val loss 2.4971\n",
-      "step 9400: train loss 2.4554 val loss 2.4930\n",
-      "step 9600: train loss 2.4596 val loss 2.4922\n",
-      "step 9800: train loss 2.4526 val loss 2.4982\n",
-      "\n",
-      "Be e lane.\n",
-      "O t,\n",
-      "MAnd thast ay bet citinorir. IS: amo ngo m fasstou s,--\n",
-      "AMu t htereerd\n",
-      "BE:\n",
-      "TUR:\n",
-      "NCLer isenookie w I't O:\n",
-      "Wh.\n",
-      "ILIm piceetowed amand e\n",
-      "Sore ofouse sis is ith y de\n",
-      "TERe hed COfad ym o thando yo owe be mand h lomed h t:\n",
-      "3 ther tl mor, s\n",
-      "\n",
-      "\n",
-      "\n",
-      "PEdshenceadad, hore mma unest s y areased pis co driey meawhe ainon maputou ouril has be.\n",
-      "y, d slimeveke ckst da my s,\n",
-      "DWhad s o he dous.\n",
-      "\n",
-      "\n",
-      "ERCUCKEDicot f Larerar, m jof marolllcig ht thif wherowait ty, y:\n",
-      "Jo he wek slld fofud\n",
-      "As mowinequthar se l \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for it in range(10000):\n",
     "    if (it % eval_iters) == 0:\n",
@@ -375,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov  4 2022, 16:13:54) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
