adapted from @karpathy/ng-video-lecture

--- a/basic_gpt.ipynb
+++ b/basic_gpt.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code adapted from https://github.com/karpathy/ng-video-lecture\n",
+    "\n",
     "import torch \n",
     "import torch.nn as nn \n",
     "import torch.nn.functional as F"
