--- a/dummy_bigram_model.ipynb
+++ b/dummy_bigram_model.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code adapted from https://github.com/karpathy/ng-video-lecture\n",
+    "\n",
     "import torch \n",
     "import torch.nn as nn \n",
     "from torch.nn import functional as F "
